--- a/style.css
+++ b/style.css
@@ -7,9 +7,15 @@
     width: 100%;
     height: 10vh;
     display: flex;
+    background-color: rgb(6, 153, 128);
 }
 .icon{
     width: 45%;
+    padding-left: 8vw;
+    padding-top: 2vh;
+    font-size: 20px;
+    box-sizing: border-box;
+    font-family: monospace;
 }
 .nav{
     width: 50%;
@@ -22,16 +28,17 @@
     text-align: center;
     padding-top: 2vh;
     box-sizing: border-box;
-    font-size: 20px;
+    font-size: 13px;
     margin-top: 2px;
 }
 .nav_child:hover{
-    background-color: rgb(6, 153, 128);
+    background-color: rgb(212, 151, 18);
     color: white;
+    cursor: pointer;
 }
 .settings{
     width: 5%;
-    height: 5vh;
+    height: 2vh;
     margin-top: 2.5vh;
     margin-right: 2vw;
     background-image: url("icon.png");
@@ -44,72 +51,54 @@
 .parent{
     width: 100%;
     display: flex;
+    margin-left: 5vw;
+    margin-top: 5vh;
 }
 .child{
     width: 50%;
     box-sizing: border-box;
-    padding-left: 5vw;
-    margin-top: 10vh;
 }
 
-.child_div1{
-    width: 15vw;
-    height: 30vh;
-    background-color: rgb(13, 146, 223);
-    z-index: 2;
-    position: absolute;
-    margin-left: 20vw;
-    margin-top: 20vh;
-    /* box-shadow: -8px -8px  10px  rgb(106, 109, 110);
-    border: 2px solid rgb(7, 56, 112); */
-}
-.child_div2{
-    width: 20%;
-    height: 40%;
-    background-color: tomato;
-    z-index: 1;
-    position: absolute;
-    /* box-shadow: -8px -8px 10px rgb(212, 100, 100);
-    border: 2px solid rgb(238, 51, 51); */
-}
-.child_div3{
-    width: 15%;
-    height: 50vh;
-    z-index: 3;
-    position: absolute;
-    margin-top: 5vh;
-    margin-left: 10vw;
-    box-shadow: -8px -8px 5px rgb(194, 190, 190);
+.child_div{
+    width: 70%;
+    height: 80vh;
+    background-image: url("emma.jpeg");
+    background-position: center;
+    background-size: cover;
+    /* margin-top: 15px;
+    margin-left: 5vw; */
+    margin-right: 5vw;
     border: 2px solid gray;
     transition: 1s;
 }
-.child_div3:hover{
-    width: 19%;
-    height: 60vh;
-}
+
 .child1{
     width: 40%;
-    padding-top: 10%;
+    text-align: center;
+    margin-top: 15vh;
+    font-size: 15px;
+    font-family: 'Times New Roman', Times, serif;
 }
 h1{
-    font-size: 70px;
+    font-size: 40px;
     margin-bottom: 2%;
 }
 button{
     width: 30%;
     height: 7vh;
     margin-top: 5vh;
-    margin-left: 40%;
+    margin-left: 20%;
+    margin-right: 20%;
+    font-size: 13px;
     border-radius: 10px;
     background-color: rgb(6, 153, 128);
     border: none;
     color: white;
-    font-size: 18px;
     transition: 0.5s;
 }
 
 button:hover{
-    background-color: rgb(5, 104, 104);
+    background-color: rgb(236, 188, 27);
     border-radius: 20px;
 }
 
@@ -123,7 +112,17 @@ button:hover{
         display: none;
     }
     .parent{
-        flex-wrap: wrap;
+        display: block;
+    }
+    .child{
+        width: 100%;
+    }
+    .child_div{
+        width: 100%;
+    
+    }
+    .child1{
+        width: 100%;
     }
     
 
